# FileServer

./: .$FileServer.drawio.bkp  .gitignore  FileServer.sql  FileServer_Create_DB.sql  NOTICE.txt  README.md  TODO.md  application_example.properties  build.gradle.kts  dev-server.js  launch.sh  package-lock.json  package.json  rebuild.sh  rebuild_and_run.sh  server.js  setup.sh  tailwind.config.js
FileServer/: FileServer.sln
FileServer/FileServer/: FileServer.vcxproj  FileServer.vcxproj.filters
FileServer/FileServer/src/: main.cpp
FrontendServer/: install-python-depths.sh  ssl-create-certificate.sh
FrontendServer/src/backend/: app.py  main.py
FrontendServer/src/backend/model/: group.py  modelmeta.py  user.py
FrontendServer/src/backend/service/: aservice.py  groupservice.py  publicgroupservice.py  userservice.py
FrontendServer/src/backend/validators/: modelvalidator.py
FrontendServer/src/frontend/template/: about.html  account.html  http_error.html  index.html
SameFileServer/FileServer/: FileServer.vcxproj  FileServer.vcxproj.filters
SameFileServer/FileServer/src/: main.cpp
SameFileServer/FileServer/src/ConnectionType/: ConnectionType.hpp
SameFileServer/FileServer/src/Crypto/: EAS_GCM.hpp
SameFileServer/FileServer/src/Functions/: Functions.cpp  Functions.hpp
SameFileServer/FileServer/src/Server/: Server.hpp
SameFileServer/FileServer/src/Socket/: SecureSocket.cpp  SecureSocket.hpp  Socket.cpp  Socket.hpp
SameFileServerCmake/: CMakeLists.txt
SameFileServerCmake/src/: main.cpp
SameFileServerCmake/src/Core/: FileManager.cpp  FileManager.hpp
SameFileServerCmake/src/utils/: functions.cpp  functions.hpp
__tests__/: ApiTest.test.js
angular_server/: README.md  TODO.md  angular.json  package.json
angular_server/src/: index.html  main.ts  styles.css
angular_server/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts
angular_server/src/app/app-footer/: app-footer.css  app-footer.html  app-footer.spec.ts  app-footer.ts
angular_server/src/app/app-header/: app-header.css  app-header.html  app-header.spec.ts  app-header.ts
angular_server/src/app/core/: global-error-handler.ts
angular_server/src/app/file-search/: file-search.css  file-search.html  file-search.spec.ts  file-search.ts
angular_server/src/app/file-search-header/: file-search-header.css  file-search-header.html  file-search-header.spec.ts  file-search-header.ts
angular_server/src/styles/: AccountPage.css  ErrorMessage.css  FileTable.css  FilesPage.css  LoginPage.css  MainContent.css  ModelTable.css  NotFound.css  RedirectionButton.css  blue-button.css  buttons-row.css  buttons.css  cancel-button.css  delete-button.css  files-page-buttons.css  green-button.css  indented.css  orange-button.css  red-button.css  submit-button.css  sumbit-button.css
kotlin_spring_server/: .gitignore  TODO.md  build.gradle.kts
kotlin_spring_server/gradle/wrapper/: gradle-wrapper.properties
kotlin_spring_server/src/main/kotlin/: FileserverApplication.kt
kotlin_spring_server/src/main/resources/: application.yml  application_example.properties
public/: index.html
react_server/: TODO.md  package.json
react_server/public/: about.html  index.html
react_server/src/: App.js  index.css
react_server/src/assets/img/: index.js
react_server/src/components/: ChangePasswordModal.js  DeleteConfirmationModal.js  ErrorMessage.js  FileSearch.js  FilesPageMenu.js  FolderTable.js  LoadingSpinner.js  MainContent.js  PermissionManager.css
react_server/src/components/modal/: Modal.js
react_server/src/context/: AuthContext.js
react_server/src/css_classes/: indented.css
react_server/src/entity/: GroupCreateModel.js  GroupDetails.js  GroupUpdateModel.js  UpdatePasswordRequest.js  UserModelAdminResponse.js
react_server/src/pages/: AccountPage.js  UsersPage.js
react_server/src/parts/: AboutContent.js
react_server/src/services/: AdminService.test.js  UserService.test.js
react_server/src/styles/: AccountPage.css  LoginPage.css  Modal.css  blue-button.css  orange-button.css
src/: App.css  App.js  index.css  index.js  setupTests.js
src/components/: AdminPanel.js  Breadcrumbs.js  ChangePasswordModal.js  CreateFolderModal.js  CreateItemModal.css  CreateItemModal.js  CreateUserModal.js  DeleteConfirmationModal.js  ErrorMessage.js  FileSearch.js  FileTable.js  FilesSearch.js  FolderGrid.js  FolderTable.js  FoundFilesTable.js  FoundFoldersTables.js  MainContent.css  Modal.js  PermissionManager.js
src/components/element/: RedirectionButton.js
src/components/modal/group/: AddUserToGroupModal.js  CreateGroupModal.js  DeleteGroupModal.js  UpdateGroupModal.js
src/components/modal/user/: CreateUserModal.js  DeleteUserModal.js  UpdateUserModal.js  UpdateUserPasswordModal.js
src/context/: AuthContext.js  ProtectedRoute.js
src/css_classes/: image-button.css
src/elements/: FilesSearch.js
src/entity/: GroupBasicInfo.js  GroupDetails.js  User.js  UserModelAdminResponse.js
src/main/kotlin/: FileserverApplication.kt
src/main/kotlin/config/: PasswordConfig.kt  SecurityConfig.kt
src/main/kotlin/controller/: AdministratorController.kt  AuthController.kt  ErrorController.kt  FileController.kt  GroupController.kt  UserController.kt
src/main/kotlin/dto/: GroupDTO.kt  LoginByEmailRequest.kt  UserDto.kt
src/main/kotlin/entity/: Administrator.kt  DeletedFile.kt  DirectoryData.kt  FileMetadata.kt  Group.kt  User.kt  WorkHistory.kt
src/main/kotlin/filter/: JwtRequestFilter.kt
src/main/kotlin/repository/: AdministratorRepository.kt  (+6 more)
src/main/resources/: application.properties
src/pages/: AboutPage.js  AccountPage.js  FilesPage.js  GroupPage.js  GroupsPage.js  HomePage.js  LoginPage.js  UserPage.js  UsersPage.js
src/parts/: Footer.js  Header.js  footer.css  header.css
src/services/: AdminService.js  AuthService.js  FileService.js  GroupService.js  GroupService.test.js  LoginService.js  UserService.js  UserService.test.js  api.js
src/styles/: AccountPage.css  ErrorMessage.css  FileTable.css  FilesPage.css  Modal.css  SearchResults.css  global.css  red-button.css
(+328 files in other folders)
